--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://Bergyo24.ggithub.io/PokeDexv1.0",
+  "homepage":"https://Bergyo24.ggithub.io/PokeDexv1.0",
   "name": "pokedex",
   "version": "0.1.0",
   "private": true,
